--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-theme: jekyll-theme-midnight
+theme: jekyll-theme-minimal
 title: Adam Keener's GitHub Page
 description: Keep looking here for my future projects!
