--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-theme: jekyll-theme-minimal
+theme: jekyll-theme-tactile
 title: Adam Keener's GitHub Page
 description: Keep looking here for my future projects!
