--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-tactile
-title: Adam Keener's GitHub Page
+title: Adam Keener
 description: Keep looking here for my future projects!
