--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-midnight
 title: Adam Keener
-description: Keep looking here for my future projects!
+description: former scientist, budding coder
